--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
       "url": "git+https://github.com/luxplanjay/webpack-starter-kit.git"
     },
     "keywords": [],
-    "author": "Tetiana Bronitska <tanya_nest@ukr.net>",
+    "author": "Vitalii Lazarenko <V.Lazarenko8080@gmail.com>",
     "license": "MIT",
     "bugs": {
       "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
     },
-    "homepage": "https://tetianabron.github.io/goit-js-hw-11-color-switch",
+    "homepage": "https://vitalii8080.github.io/goit-js-hw-11-color-switch/",
     "devDependencies": {
       "@babel/core": "^7.11.6",
       "@babel/plugin-proposal-class-properties": "^7.10.4",
